--- a/Skynet/Skynet.csproj
+++ b/Skynet/Skynet.csproj
@@ -105,4 +105,7 @@
       <Name>SharpTox</Name>
     </ProjectReference>
   </ItemGroup>
+  <PropertyGroup>
+    <PostBuildEvent>xcopy /Q /Y /S "$(TargetDir)*" "$(SolutionDir)dist"</PostBuildEvent>
+  </PropertyGroup>
 </Project>
