--- a/Skynet/Skynet.csproj
+++ b/Skynet/Skynet.csproj
@@ -106,6 +106,6 @@
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
-    <PostBuildEvent>xcopy /Q /Y /S "$(TargetDir)*" "$(SolutionDir)dist"</PostBuildEvent>
+    <PostBuildEvent>(robocopy "$(TargetDir.TrimEnd('\'))" "$(SolutionDir)dist" /S /IS /IT /XO /NFL /NDL /NJH /NJS /nc /ns /np /XF *.xml *.pdb) ^&amp; IF %25ERRORLEVEL%25 LEQ 7 exit 0</PostBuildEvent>
   </PropertyGroup>
 </Project>
