--- a/SharpTox/SharpTox/SharpTox.csproj
+++ b/SharpTox/SharpTox/SharpTox.csproj
@@ -85,7 +85,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;POSIX</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>bin\Debug\SharpTox.XML</DocumentationFile>
